--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
   "scripts": {
     "start": "webpack"
   },
-  "author": "",
+  "author": "hitrick",
   "license": "ISC",
   "dependencies": {
+    "angular": "^1.4.8",
     "angular-route": "^1.4.8"
   }
 }
